@@ -1,3 +1,11 @@
+2008-10-23  Tim Vandermeersch <tim.vandermeersch@gmail.com>
+
+	* src/chains.cpp: Remove debug output.
+
+	* src/forcefields/forcefielduff.cpp: Check if parameters are found and
+	don't try to use a NULL pointer when there isn't a parameter. (Fixes:
+	#2187870)
+
 2008-10-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
 	* src/forcefields/forcefield*.h: Fix MakeNewInstance().
